--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,19 +10,12 @@ repositories {
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     defaultConfig {
         applicationId "org.kabiri.android.usbterminal"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 7
         versionName "0.7.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -33,6 +26,24 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
+        kotlinCompilerExtensionVersion "$compose_compiler_extension_version"
+    }
 }
 
 dependencies {
@@ -42,6 +53,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Jetpack Compose Toolkit Dependencies
+    implementation 'androidx.ui:ui-framework:0.1.0-dev10'
+    implementation 'androidx.ui:ui-tooling:0.1.0-dev10'
+    implementation 'androidx.ui:ui-layout:0.1.0-dev10'
+    implementation 'androidx.ui:ui-material:0.1.0-dev10'
 
     // Settings Activity
     implementation 'androidx.preference:preference:1.1.1'
