--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,19 @@
 buildscript {
     ext.kotlin_version = '1.3.72'
     ext.koin_version = '2.1.5'
+
+    def compose_release_version = 'dev10'
+    ext.compose_version = "0.1.0-$compose_release_version"
+    ext.compose_compiler_extension_version = "0.1.0-$compose_release_version"
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.1.0-alpha09'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
