--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.koin_version = '2.1.5'
+
+    // versions
+    ext {
+        // app dependencies.
+        kotlin_version = '1.3.72'
+        koin_version = '2.1.5'
+        roomVersion = '2.2.5'
+    }
 
     def compose_release_version = 'dev10'
     ext.compose_version = "0.1.0-$compose_release_version"
