--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,17 +11,8 @@ repositories {
 android {
 
     compileSdkVersion 30
+    buildToolsVersion "30.0.0"
     dataBinding { enabled = true }
-    buildToolsVersion "29.0.3"
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    // work-runtime-ktx 2.1.0 and above now also requires the Java 8
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
 
     defaultConfig {
         applicationId "org.kabiri.android.usbterminal"
@@ -29,33 +20,29 @@ android {
         targetSdkVersion 30
         versionCode 7
         versionName "0.7.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
         jvmTarget = "1.8"
     }
-
     buildFeatures {
         // Enables Jetpack Compose for this module
         compose true
     }
-
     composeOptions {
+        kotlinCompilerExtensionVersion "${compose_version}"
         kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
-        kotlinCompilerExtensionVersion "$compose_compiler_extension_version"
     }
 }
 
