--- a/build.gradle
+++ b/build.gradle
@@ -8,18 +8,15 @@ buildscript {
         kotlin_version = '1.3.72'
         koin_version = '2.1.5'
         roomVersion = '2.2.5'
+        compose_version = "0.1.0-dev10"
     }
-
-    def compose_release_version = 'dev10'
-    ext.compose_version = "0.1.0-$compose_release_version"
-    ext.compose_compiler_extension_version = "0.1.0-$compose_release_version"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-alpha01'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
     }
