--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ android {
 
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
-    dataBinding { enabled = true }
 
     defaultConfig {
         applicationId "org.kabiri.android.usbterminal"
@@ -35,30 +34,47 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        apiVersion = '1.3' // Compose compiler based on 1.4 but set 1.3 for compatibility
     }
     buildFeatures {
         // Enables Jetpack Compose for this module
         compose true
+        dataBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "${compose_version}"
+        kotlinCompilerExtensionVersion compose_version
         kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
+    }
+}
+
+//groovy
+configurations.all {
+    resolutionStrategy.force "org.antlr:antlr4-runtime:4.5.3"
+    resolutionStrategy.force "org.antlr:antlr4-tool:4.5.3"
+}
+
+//kotlin DSL
+configurations.all {
+    resolutionStrategy {
+        force("org.antlr:antlr4-runtime:4.5.3")
+        force("org.antlr:antlr4-tool:4.5.3")
     }
 }
 
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Jetpack Compose Toolkit Dependencies
-    implementation "androidx.ui:ui-framework:$compose_version"
-    implementation "androidx.ui:ui-tooling:$compose_version"
-    implementation "androidx.ui:ui-layout:$compose_version"
-    implementation "androidx.ui:ui-material:$compose_version"
+//    implementation "androidx.ui:ui-framework:$compose_version"
+//    implementation "androidx.ui:ui-tooling:$compose_version"
+//    implementation "androidx.ui:ui-layout:$compose_version"
+//    implementation "androidx.ui:ui-material:$compose_version"
+    implementation "androidx.compose:compose-runtime:$compose_version"
 
     // Room
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
