--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         // app dependencies.
         kotlin_version = '1.3.72'
         koin_version = '2.1.5'
-        roomVersion = '2.2.5'
-        compose_version = "0.1.0-dev10"
+        roomVersion = '2.3.0-alpha01'
+        compose_version = "0.1.0-dev14"
     }
 
     repositories {
@@ -16,7 +16,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-alpha02'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
     }
