--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,6 @@ repositories {
 android {
 
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
 
     defaultConfig {
         applicationId "org.kabiri.android.usbterminal"
@@ -28,13 +27,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
     kotlinOptions {
-        jvmTarget = "1.8"
-        apiVersion = '1.3' // Compose compiler based on 1.4 but set 1.3 for compatibility
+        jvmTarget = JavaVersion.VERSION_1_8
     }
     buildFeatures {
         // Enables Jetpack Compose for this module
@@ -42,8 +36,12 @@ android {
         dataBinding true
     }
     composeOptions {
+        kotlinCompilerVersion kotlin_version
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -65,21 +63,21 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     // Jetpack Compose Toolkit Dependencies
-//    implementation "androidx.ui:ui-framework:$compose_version"
-//    implementation "androidx.ui:ui-tooling:$compose_version"
-//    implementation "androidx.ui:ui-layout:$compose_version"
-//    implementation "androidx.ui:ui-material:$compose_version"
-    implementation "androidx.compose:compose-runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.ui:ui-tooling:$compose_version"
+    implementation 'com.google.android.material:material:1.2.1'
 
     // Room
-    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
-    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
-    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
 
     // Settings Activity
     implementation 'androidx.preference:preference-ktx:1.1.1'
@@ -88,7 +86,9 @@ dependencies {
     implementation 'io.sentry:sentry-android-core:2.0.2'
 
     // Koin for Android - ViewModel features
-    implementation "org.koin:koin-android-viewmodel:$koin_version"
+    implementation "org.koin:koin-core:$koin_version"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     // Coroutines
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
@@ -102,13 +102,13 @@ dependencies {
 
     // unit tests
     testImplementation 'junit:junit:4.13'
-    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'io.mockk:mockk:1.10.0'
     testImplementation "com.google.truth:truth:1.0.1"
 
     // instrumented tests
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     /**
      * This library helps to automate some parts of the USB serial connection.
