--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
     // versions
     ext {
         // app dependencies.
-        kotlin_version = '1.3.72'
-        koin_version = '2.1.5'
-        roomVersion = '2.3.0-alpha01'
-        compose_version = "0.1.0-dev14"
+        kotlin_version = '1.4.10'
+        koin_version = '3.0.0-alpha-4'
+        roomVersion = '2.3.0-alpha02'
+        compose_version = "1.0.0-alpha04"
     }
 
     repositories {
@@ -16,7 +16,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-alpha04'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha13'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
     }
@@ -27,6 +27,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url "https://dl.bintray.com/ekito/koin" }
     }
 }
 
