--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
+        useIR = true
     }
     buildFeatures {
         // Enables Jetpack Compose for this module
@@ -45,24 +46,10 @@ android {
     }
 }
 
-//groovy
-configurations.all {
-    resolutionStrategy.force "org.antlr:antlr4-runtime:4.5.3"
-    resolutionStrategy.force "org.antlr:antlr4-tool:4.5.3"
-}
-
-//kotlin DSL
-configurations.all {
-    resolutionStrategy {
-        force("org.antlr:antlr4-runtime:4.5.3")
-        force("org.antlr:antlr4-tool:4.5.3")
-    }
-}
-
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
@@ -93,8 +80,8 @@ dependencies {
     // Coroutines
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 //    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-RC2'
 
     // networking
