--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
+    testOptions {
+
+        animationsDisabled = true
+
+        managedDevices {
+            devices {
+                pixel2api31 (com.android.build.api.dsl.ManagedVirtualDevice) {
+                    device = "Pixel 2"
+                    apiLevel = 31
+                    systemImageSource = "google"
+                }
+            }
+        }
+    }
 
     namespace 'org.kabiri.android.usbterminal'
 
