--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,14 @@ jobs:
       image: ubuntu-2004:current
     resource_class: arm.medium
     steps:
-      - run: uname -a
-      - run: echo "Hello, Arm!"
+      - run: |
+        # make sure to use ubuntu jammy or newer
+        yes | sudo apt install android-sdk sdkmanager
+        export ANDROID_HOME=/usr/lib/android-sdk
+        export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
+        yes | sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
+        yes | sdkmanager --licenses
+        ./gradlew pixel2api31DebugAndroidTest
 
 workflows:
   workflow:
