--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,13 @@ jobs:
       image: ubuntu-2004:current
     resource_class: arm.medium
     steps:
+      - run: yes | sudo apt install android-sdk sdkmanager
       - run: |
-        # make sure to use ubuntu jammy or newer
-        yes | sudo apt install android-sdk sdkmanager
-        export ANDROID_HOME=/usr/lib/android-sdk
-        export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
-        yes | sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
-        yes | sdkmanager --licenses
-        ./gradlew pixel2api31DebugAndroidTest
+          export ANDROID_HOME=/usr/lib/android-sdk
+          export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
+      - run: yes | sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
+      - run: yes | sdkmanager --licenses
+      - run: ./gradlew pixel2api31DebugAndroidTest
 
 workflows:
   workflow:
