--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,9 @@ jobs:
       - run: lsb_release -a
       - run: (yes || true) | sudo apt install sdkmanager
       - run: (yes || true) | sudo apt install android-sdk
+      - run: sudo chmod -R 777 /opt/android-sdk
       - run: |
-          export ANDROID_HOME=/usr/lib/android-sdk
+          export ANDROID_HOME=/opt/android-sdk
           export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
       - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
       - run: (yes || true) | sdkmanager --licenses
