--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run: (yes || true) | sudo apt install sdkmanager
       - run: (yes || true) | sudo apt install android-sdk
       - run: sudo chmod -R 777 /usr/lib/android-sdk
+      - run: sudo chmod -R 777 /opt/android-sdk
       - run: |
           export ANDROID_HOME=/usr/lib/android-sdk
           export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
