--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       image: ubuntu-2204:current
     resource_class: arm.medium
     steps:
+      - checkout
       - run: lsb_release -a
       - run: (yes || true) | sudo apt install sdkmanager
       - run: (yes || true) | sudo sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
