--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
       - run: |
           export ANDROID_HOME=/usr/lib/android-sdk
           export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
+      - run: ls $ANDROID_HOME
       - run: python3 scripts/generateKsPropFile.py
       - run: ./gradlew pixel2api31DebugAndroidTest
       - save_gradle_cache
