--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,10 @@ jobs:
       - run: sudo chmod -R 777 /opt/android-sdk
       - run: (yes || true) | sdkmanager --licenses
       - run: |
-          export ANDROID_HOME=/usr/lib/android-sdk
+          export ANDROID_HOME=/opt/android-sdk
           export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
-      - run: ls $ANDROID_HOME
+      - run: echo $ANDROID_HOME
+      - run: ls -la $ANDROID_HOME
       - run: python3 scripts/generateKsPropFile.py
       - run: ./gradlew pixel2api31DebugAndroidTest
       - save_gradle_cache
