--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,16 @@ jobs:
       image: ubuntu-2204:current
     resource_class: arm.medium
     steps:
-      - checkout
       - run: lsb_release -a
+      - checkout
+      - run: python3 scripts/generateKsPropFile.py
       - restore_gradle_cache
+      - run: ./gradlew assembleDebug
+      - save_gradle_cache
       - run: (yes || true) | sudo apt install sdkmanager
       - run: (yes || true) | sudo sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
       - run: sudo chmod -R 777 /opt/android-sdk
       - run: (yes || true) | sdkmanager --licenses
-      - run: python3 scripts/generateKsPropFile.py
       - run: |
           ls -la /opt/android-sdk
           export ANDROID_HOME=/opt/android-sdk
@@ -40,7 +42,6 @@ jobs:
           echo $ANDROID_HOME
           echo $PATH
           ./gradlew pixel2api31DebugAndroidTest
-      - save_gradle_cache
 
 workflows:
   workflow:
