--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - checkout
       - run: python3 scripts/generateKsPropFile.py
       - restore_gradle_cache
-      - run: ./gradlew assembleDebug
+      - run: ./gradlew tasks
       - save_gradle_cache
       - run: (yes || true) | sudo apt install sdkmanager
       - run: (yes || true) | sudo sdkmanager "tools" "platform-tools" "build-tools;33.0.1" "platforms;android-33" "emulator;31.3.9"
