--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
   android-test:
     machine:
       image: ubuntu-2204:current
-    resource_class: medium
+    resource_class: large
     steps:
       - run: lsb_release -a
       - checkout
