--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
   android-test:
     machine:
       image: android:2022.12.1
-    resource_class: large
+    resource_class: xlarge
     steps:
       - run: lsb_release -a
       - checkout
@@ -31,15 +31,10 @@ jobs:
       - restore_gradle_cache
       - run: ./gradlew tasks
       - save_gradle_cache
-#       - run: (yes || true) | sudo apt install sdkmanager
       - run: sdkmanager --list
       - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.2" "platforms;android-33" "system-images;android-31;google_apis;x86_64"
-#       - run: sudo chmod -R 777 /opt/android-sdk
       - run: (yes || true) | sdkmanager --licenses
-      - run: |
-          echo $ANDROID_HOME
-          echo $PATH
-          ./gradlew pixel2api31DebugAndroidTest
+      - run: ./gradlew pixel2api31DebugAndroidTest --stacktrace
 
 workflows:
   workflow:
