--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,12 @@ jobs:
       - restore_gradle_cache
       - run: ./gradlew tasks
       - save_gradle_cache
+      - run: du -hs $ANDROID_HOME
       - run: sdkmanager --list
       - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.2" "platforms;android-33" "system-images;android-31;google_apis;x86_64"
       - run: (yes || true) | sdkmanager --licenses
+      - run: echo $ANDROID_HOME
+      - run: du -hs $ANDROID_HOME
       - run: ./gradlew pixel2api31DebugAndroidTest --stacktrace
 
 workflows:
