--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,8 @@ jobs:
       - run: echo $ANDROID_HOME
       - run: du -hs $ANDROID_HOME
       - run: ./gradlew pixel2api31DebugAndroidTest --stacktrace
+      - store_artifacts:
+          path: app/build/test-results/testDebugUnitTest
 
 workflows:
   workflow:
