--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  android: circleci/android@2.1.2
 
 commands:
   restore_gradle_cache:
@@ -28,18 +30,19 @@ jobs:
       - run: lsb_release -a
       - checkout
       - run: python3 scripts/generateKsPropFile.py
-      - restore_gradle_cache
-      - run: ./gradlew tasks
-      - save_gradle_cache
-      - run: du -hs $ANDROID_HOME
-      - run: sdkmanager --list
-      - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.2" "platforms;android-33" "system-images;android-31;google_apis;x86_64"
-      - run: (yes || true) | sdkmanager --licenses
-      - run: echo $ANDROID_HOME
-      - run: du -hs $ANDROID_HOME
-      - run: ./gradlew pixel2api31DebugAndroidTest --stacktrace
-      - store_artifacts:
-          path: app/build/reports/androidTests/managedDevice
+#       - restore_gradle_cache
+#       - run: ./gradlew tasks
+#       - save_gradle_cache
+#       - run: du -hs $ANDROID_HOME
+#       - run: sdkmanager --list
+#       - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.2" "platforms;android-33" "system-images;android-31;google_apis;x86_64"
+#       - run: (yes || true) | sdkmanager --licenses
+#       - run: echo $ANDROID_HOME
+#       - run: du -hs $ANDROID_HOME
+      - android/run-ui-tests:
+#       - run: ./gradlew pixel2api31DebugAndroidTest --stacktrace
+#       - store_artifacts:
+#           path: app/build/reports/androidTests/managedDevice
 
 workflows:
   workflow:
