--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,9 @@ jobs:
       - run: lsb_release -a
       - checkout
       - run: python3 scripts/generateKsPropFile.py
+      - run: sdkmanager --list
       - android/run-ui-tests:
+        system-image: system-images;android-29;default;x86
 
 workflows:
   workflow:
