--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
     executor:
       name: android/android-machine
       resource_class: large
+      tag: 2022.12.1
     steps:
       - run: lsb_release -a
       - checkout
