--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
   android-test:
     executor:
       name: android/android-machine
-      resource_class: large
+      resource-class: large
       tag: 2022.12.1
     steps:
       - run: lsb_release -a
