--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - android/create-avd:
           avd-name: test
           install: true
-          system-image: system-images;android-31;default;x86_64
+          system-image: system-images;android-29;default;x86
       - android/start-emulator:
           avd-name: test
       - android/run-tests
