--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - android/create-avd:
           avd-name: test
           install: true
-          system-image: system-images;android-29;default;x86
+          system-image: system-images;android-30;google_atd;x86
       - android/start-emulator:
           avd-name: test
       - android/run-tests
