--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,10 @@ jobs:
       - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.2" "platforms;android-33" "system-images;android-30;google_atd;x86"
       - run: (yes || true) | sdkmanager --licenses
       - run: ./gradlew pixel2api30DebugAndroidTest --stacktrace
+      - store_test_results:
+        path: app/build/mergedReportDir/jacocoTestReport/jacocoTestReport.xml
       - store_artifacts:
-          path: app/build/reports/androidTests/managedDevice
+        path: app/build/mergedReportDir
 
 workflows:
   workflow:
