--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,10 @@ jobs:
       - run: sdkmanager --list
       - run: (yes || true) | sdkmanager "tools" "platform-tools" "build-tools;33.0.2" "platforms;android-33" "system-images;android-30;google_atd;x86"
       - run: (yes || true) | sdkmanager --licenses
+      - run: ./gradlew assembleDebug --stacktrace
       - run: ./gradlew pixel2api30DebugAndroidTest --stacktrace
+      - run: ./gradlew testDebugUnitTest --stacktrace
+      - run: ./gradlew jacocoTestReport --stacktrace
       - store_test_results:
           path: app/build/mergedReportDir/jacocoTestReport/jacocoTestReport.xml
       - store_artifacts:
