--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run: ./gradlew testDebugUnitTest --stacktrace
       - run: ./gradlew jacocoTestReport --stacktrace
       - store_test_results:
-          path: app/build/mergedReportDir/jacocoTestReport/jacocoTestReport.xml
+          path: app/build/mergedReportDir/jacocoTestReport
       - store_artifacts:
           path: app/build/mergedReportDir
 
